--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "19352c6d-6b72-4952-83fa-b8ea1696baa7"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
